general/src/datascrubbing/snapshots/tests__authorization_scrubbing.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "auXth": "foobar",
    "auth": null,
    "authorization": null
  },
  "_meta": {
    "extra": {
      "auth": {
        "": {
          "rem": [
            [
              "@password",
              "x"
            ]
          ]
        }
      },
      "authorization": {
        "": {
          "rem": [
            [
              "@password",
              "x"
            ]
          ]
        }
      }
    }
  }
}
