general/src/datascrubbing/snapshots/tests__breadcrumb_message-2.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "breadcrumbs": {
    "values": [
      {
        "message": "[filtered]"
      }
    ]
  },
  "_meta": {
    "breadcrumbs": {
      "values": {
        "0": {
          "message": {
            "": {
              "rem": [
                [
                  "strip-fields",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 68
            }
          }
        }
      }
    }
  }
}
