general/src/datascrubbing/snapshots/tests__csp_blocked_uri.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "csp": {
    "blocked_uri": "https://example.com/?foo=[filtered]&bar=baz"
  },
  "_meta": {
    "csp": {
      "blocked_uri": {
        "": {
          "rem": [
            [
              "@creditcard:filter",
              "s",
              25,
              35
            ]
          ],
          "len": 49
        }
      }
    }
  }
}
