general/src/datascrubbing/snapshots/tests__does_sanitize_encrypted_private_key.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "s": "\"\"-----BEGIN ENCRYPTED PRIVATE KEY-----\n[pemkey]\n-----END ENCRYPTED PRIVATE KEY-----\"\""
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@pemkey",
              "s",
              40,
              48
            ]
          ],
          "len": 277
        }
      }
    }
  }
}
