general/src/datascrubbing/snapshots/tests__does_sanitize_private_key.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "s": "\"\"-----BEGIN PRIVATE KEY-----\n[pemkey]\n-----END PRIVATE KEY-----\"\""
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@pemkey",
              "s",
              30,
              38
            ]
          ],
          "len": 252
        }
      }
    }
  }
}
