general/src/datascrubbing/snapshots/tests__does_sanitize_public_key.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "s": "\"\"-----BEGIN PUBLIC KEY-----\n[filtered]\n-----END PUBLIC KEY-----\"\""
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@pemkey:filter",
              "s",
              29,
              39
            ]
          ],
          "len": 283
        }
      }
    }
  }
}
