general/src/datascrubbing/snapshots/tests__does_sanitize_rsa_private_key.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "s": "\"\"-----BEGIN RSA PRIVATE KEY-----\n[filtered]\n-----END RSA PRIVATE KEY-----\"\""
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@pemkey:filter",
              "s",
              34,
              44
            ]
          ],
          "len": 260
        }
      }
    }
  }
}
