general/src/datascrubbing/snapshots/tests__does_sanitize_social_security_number.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "s": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "s": {
        "": {
          "rem": [
            [
              "@usssn:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
