general/src/datascrubbing/snapshots/tests__exclude_fields_on_field_name.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "password": "[filtered]"
  },
  "_meta": {
    "extra": {
      "password": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
