general/src/datascrubbing/snapshots/tests__explicit_fields.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "mystuff": "[filtered]"
  },
  "_meta": {
    "extra": {
      "mystuff": {
        "": {
          "rem": [
            [
              "strip-fields",
              "s",
              0,
              10
            ]
          ],
          "len": 3
        }
      }
    }
  }
}
